<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GeoAlarm</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_alarm_details">AlarmDetailsActivity</string>

     <string name="details_alarm_name">Alarm Name</string>
    <string name="details_repeat_weekly">Repeat Weekly</string>
    <string name="details_sunday">Sunday</string>
    <string name="details_monday">Monday</string>
    <string name="details_tuesday">Tuesday</string>
    <string name="details_wednesday">Wednesday</string>
    <string name="details_thursday">Thursday</string>
    <string name="details_friday">Friday</string>
    <string name="details_saturday">Saturday</string>
    <string name="details_alarm_tone">Alarm Tone</string>
    <string name="details_alarm_tone_default">Select an alarm tone</string>
    <string name="details_origin_point">Pick Point of Origin</string>
    <string name="details_destination_point">Pick Destination Point</string>
    <string name="detail_items">List of Items to CrossCheck</string>
    <string name="trigger_radius">Set Trigger Radius</string>
    <string name="save_alarm_details">Save</string>
    
    
</resources>
