<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:isScrollContainer="true" >

    <!--
            <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".AlarmDetailsActivity" >
    -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:background="@color/White"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        tools:context=".AlarmDetailsActivity" >

        <Button
            android:id="@+id/pick_origin_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:ems="15"
            android:text="@string/details_origin_point" />
        
        <Button
            android:id="@+id/pick_destination_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pick_origin_point"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="10dp"
            android:ems="15"
            android:text="@string/details_destination_point" />
        
         <View
            android:id="@+id/divider6"
            style="@style/Divider"
            android:layout_alignParentLeft="true"
            android:background="@color/Blue"
            android:layout_below="@+id/pick_destination_point" />
        
        
        <TextView
            android:id="@+id/radius_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_below="@+id/pick_destination_point"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/trigger_radius" />
        
        <SeekBar
            android:id="@+id/set_radius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_below="@+id/radius_label" />
        
        <View
            android:id="@+id/divider6"
            style="@style/Divider"
            android:layout_alignParentLeft="true"
            android:background="@color/Blue"
            android:layout_below="@+id/set_radius" />
        
        <TimePicker
            android:id="@+id/alarm_details_time_picker"
            android:layout_below="@+id/divider6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_alignParentTop="false"
            android:layout_marginBottom="10dp"
            android:layout_centerHorizontal="true" />
        
        <View
            android:id="@+id/divider20"
            style="@style/Divider"
            android:layout_alignParentLeft="true"
            android:background="@color/Blue"
            android:layout_below="@+id/alarm_details_time_picker" />

        <EditText
            android:id="@+id/alarm_details_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divider20"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:ems="15"
            android:hint="@string/details_alarm_name" />
        
        <EditText
            android:id="@+id/alarm_details_items"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/alarm_details_name"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:ems="15"
            android:hint="@string/detail_items" />

        <View
            android:id="@+id/divider2"
            style="@style/Divider"
            android:layout_marginBottom="10dp"
            android:background="@color/Blue"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/alarm_details_items" />

        <com.example.controllers.CustomSwitch
            android:id="@+id/alarm_details_repeat_weekly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/divider2"
            android:checked="true"
            android:text="@string/details_repeat_weekly" />
        
        <View
            android:id="@+id/divider1"
            style="@style/Divider"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/alarm_details_repeat_weekly" />

        <com.example.controllers.CustomSwitch
            android:id="@+id/alarm_details_repeat_sunday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/divider1"
            android:checked="true"
            android:text="@string/details_sunday" />

        <com.example.controllers.CustomSwitch
            android:id="@+id/alarm_details_repeat_monday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/alarm_details_repeat_sunday"
            android:layout_below="@+id/alarm_details_repeat_sunday"
            android:checked="true"
            android:text="@string/details_monday" />

        <com.example.controllers.CustomSwitch
            android:id="@+id/alarm_details_repeat_tuesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/alarm_details_repeat_monday"
            android:layout_below="@+id/alarm_details_repeat_monday"
            android:checked="true"
            android:text="@string/details_tuesday" />
        
        <com.example.controllers.CustomSwitch
            android:id="@+id/alarm_details_repeat_wednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/alarm_details_repeat_tuesday"
            android:layout_below="@+id/alarm_details_repeat_tuesday"
            android:checked="true"
            android:text="@string/details_wednesday" />

        <com.example.controllers.CustomSwitch
            android:id="@+id/alarm_details_repeat_thursday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/alarm_details_repeat_wednesday"
            android:layout_below="@+id/alarm_details_repeat_wednesday"
            android:checked="true"
            android:text="@string/details_thursday" />

        <com.example.controllers.CustomSwitch
            android:id="@+id/alarm_details_repeat_friday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/alarm_details_repeat_thursday"
            android:layout_below="@+id/alarm_details_repeat_thursday"
            android:checked="true"
            android:text="@string/details_friday" />

        <com.example.controllers.CustomSwitch
            android:id="@+id/alarm_details_repeat_saturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/alarm_details_repeat_friday"
            android:layout_below="@+id/alarm_details_repeat_friday"
            android:checked="true"
            android:text="@string/details_saturday" />
        
        <View
            android:id="@+id/divider4"
            style="@style/Divider"
             android:background="@color/Blue"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/alarm_details_repeat_saturday" />

        <LinearLayout
            android:id="@+id/alarm_ringtone_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/divider4"
            android:background="@drawable/view_touch_selector"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/alarm_label_tone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/details_alarm_tone"
                android:textStyle="bold"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/alarm_label_tone_selection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/details_alarm_tone_default"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:id="@+id/divider3"
            style="@style/Divider"
            android:background="@color/Blue"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/alarm_ringtone_container" />
    </RelativeLayout>

</ScrollView>